Update coba lock dom.html

--- a/coba lock dom.html
+++ b/coba lock dom.html
@@ -68,7 +68,7 @@ Click
 
 
 <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="600" height="365" id="myFlashContent" align="middle">
-				<param name="movie" value="https://mathzanimation.github.io/f-l-a-s-h6/secure_pacman%20with%20timer%20(ratio)%20pake%20hp2.swf"/>
+				<param name="movie" value="https://mathzanimation.github.io/f-l-a-s-h6/secure_Rate of car (AS3).swf"/>
 				<param name="play" value="true" />
 				<param name="menu" value="true" />
 				<param name="quality" value="best" />
@@ -76,7 +76,7 @@ Click
 				<param name="wmode" value="window" />
 				<param name="allowfullscreen" value="true" />
 				<!--[if !IE]>-->
-				<object type="application/x-shockwave-flash" data="https://mathzanimation.github.io/f-l-a-s-h6/secure_pacman%20with%20timer%20(ratio)%20pake%20hp2.swf" width="600" height="365" align="middle">
+				<object type="application/x-shockwave-flash" data="https://mathzanimation.github.io/f-l-a-s-h6/secure_Rate of car (AS3).swf" width="600" height="365" align="middle">
 					<param name="play" value="true" />
 					<param name="menu" value="true" />
 					<param name="quality" value="best" />
